--- a/arado.qrc
+++ b/arado.qrc
@@ -53,10 +53,10 @@
         <file alias="arado_de.qm">translate/arado_de.qm</file>
         <file alias="arado_en.qm">translate/arado_en.qm</file>
         <file alias="arado_es.qm">translate/arado_es.qm</file>
-        <file alias="arado_zh-CN-simple.qm">translate/arado_zh-CN-simple.qm</file>
         <file alias="arado_fr.qm">translate/arado_fr.qm</file>
         <file alias="arado_sv.qm">translate/arado_sv.qm</file>
         <file>translate/arado_zh_TW.qm</file>
+        <file>translate/arado_zh-CN-simple.qm</file>
     </qresource>
     <qresource prefix="/schemas">
         <file alias="urltable.sql">schemafiles/urltable.sql</file>
