--- a/arado.qrc
+++ b/arado.qrc
@@ -52,12 +52,21 @@
     </qresource>
     <qresource prefix="/translate">
         <file alias="arado_de.qm">translate/arado_de.qm</file>
-        <file alias="arado_en.qm">translate/arado_en.qm</file>
         <file alias="arado_es.qm">translate/arado_es.qm</file>
         <file alias="arado_fr.qm">translate/arado_fr.qm</file>
         <file alias="arado_sv.qm">translate/arado_sv.qm</file>
         <file>translate/arado_zh_TW.qm</file>
         <file>translate/arado_zh-CN-simple.qm</file>
+        <file>translate/arado_es.qm</file>
+        <file>translate/arado_fr.qm</file>
+        <file>translate/arado_sv.qm</file>
+        <file>translate/arado_af.qm</file>
+        <file>translate/arado_ru.qm</file>
+        <file>translate/arado_it.qm</file>
+        <file>translate/arado_ja.qm</file>
+        <file>translate/arado_nl.qm</file>
+        <file>translate/arado_pl.qm</file>
+        <file>translate/arado_pt.qm</file>
     </qresource>
     <qresource prefix="/schemas">
         <file alias="urltable.sql">schemafiles/urltable.sql</file>
