--- a/ui/feed-input.ui
+++ b/ui/feed-input.ui
@@ -69,7 +69,7 @@
       </size>
      </property>
      <property name="text">
-      <string>OK</string>
+      <string>Read</string>
      </property>
      <property name="icon">
       <iconset resource="../arado.qrc">
