change of the clean icon.

--- a/arado.qrc
+++ b/arado.qrc
@@ -45,6 +45,7 @@
         <file>images/exec.png</file>
         <file>images/heartbeat.png</file>
         <file>images/konquest.png</file>
+        <file>images/clean.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
