--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -130,6 +130,38 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="crawlButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>43</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string>Lookup: Crawl all selected URLs for more URLs from this context.</string>
+             </property>
+             <property name="text">
+              <string>Lookup</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../arado.qrc">
+               <normaloff>:/images/wizard.png</normaloff>:/images/wizard.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item row="1" column="0">
