Advanced view: = checked.

--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -412,6 +412,22 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QCheckBox" name="checkAdvViewBox">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="layoutDirection">
+            <enum>Qt::RightToLeft</enum>
+           </property>
+           <property name="text">
+            <string>Advanced View</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
@@ -714,6 +730,9 @@
      </item>
      <item>
       <widget class="QSpinBox" name="ipcachesize">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="toolTip">
         <string>Amount of IP-adresses in your IP-cache (1500-5000). Rise up, if all IP-adresses are outdated or offline and connections fail after a start.  Then each minute a request is sent to the boot-IP-connections, to fill the cache for 100%.</string>
        </property>
