--- a/arado.qrc
+++ b/arado.qrc
@@ -49,6 +49,7 @@
         <file>images/btn1.png</file>
         <file>images/btn2.png</file>
         <file>images/btn3.png</file>
+        <file>images/youtubemp3play.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
